# transit_planning_with_python

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  directory_structure.txt  linter.py  pyproject.toml  requirements-arcpro.txt  requirements-dev.txt  requirements.txt  requirements_arcpro.txt  target_files.txt  test_bus_schedule_exporter_e2e.py  ty.toml  ty_check_output.txt  ty_final_output.txt  ty_output.txt  ty_output_errors.txt  ty_output_final.txt
_common_functions/: common_functions.py
bus_bay_management/: block_status_by_minute_generator.py  bus_bay_assignment_ilp.py  bus_bay_by_min_conflict_checker.py  bus_bay_cluster_validation.py  bus_bay_conflict_solver.py  combined_bus_bay_conflict_script_simplified.py  stop_cluster_activity_log.py  stop_cluster_conflict_checker.py  stop_cluster_conflict_solver.py
code_tools/: fake_data_generator.py  repo_imports_printer.py  reusable_functions_consistency_checker.py  static_code_reporter.py
dev_tools/: audit_helper_functions.py  check_style.py  env_validator.py  export_requirements.py  fake_data_generator.py  lint_commit.py  lint_pr.py  print_repo_file_tree.py  repo_file_tree_printer.py  repo_imports_printer.py  reusable_functions_consistency_checker.py  ruff_lint_formatter.py  ruff_lint_formatter_safe.py  static_code_checker.py  static_code_reporter.py
external_variables/: bikeshare_ridership_processor.py  cabi_ridership_processor.py  eia_gas_price_processor.py  fred_unemployment_processor.py  noaa_weather_processor.py  weather_data_processor.py
gtfs_field_resources/: bus_block_stop_exporter.py  bus_block_stop_sequence_printable.py  bus_block_timeline_exporter.py  bus_cluster_arrivals_checklist_printable.py  bus_schedule_exporter.py  gtfs_bus_arrivals_checklist_printable.py  site_visit_route_planner.py  stop_pattern_exporter.py
gtfs_validation/: gtfs_stop_capitalization_suffix_checker.py  gtfs_stop_road_shp_typo_finder.py  gtfs_stop_roadway_shp_intersection_check.py  gtfs_to_system_shp_checker.py
helpers/: gtfs_helpers.py
linting/: black_linter.py  black_lintfix.py  file_tree_printer.py  pylint_logger.py  vulture_logger.py
network_analysis/: park_and_ride_accessibility.py  segment_spacing_exporter.py  stop_spacing_calculator.py
operations_tools/: historical_otp_data_processor.py  segment_runtime_processor.py  trip_otp_processor.py
ridership_tools/: arcpy_stops_ridership_joiner.py  bus_stops_ridership_joiner.py  data_request_by_stop_processor.py  gis_stops_ridership_joiner.py  historical_ntd_data_processor.py  load_factor_violation_checker.py  monthly_ntd_data_processor.py  monthly_ntd_report_generator.py  ridership_by_route_and_stop_processor.py  ridership_per_stop_processor.py  ridership_per_trip_processor.py  stop_percent_of_route_calculator.py
sample_data/: WASH911URN_fred_sample.csv  bus_stop_amenities_sample.csv  noaa_daily_ghcn_data_sample.csv
scripts/: gtfs_level_of_service.py
service_analysis/: bus_route_district_matrix.py  gtfs_headway_span_trips_calculator.py  gtfs_nearby_routes_finder.py  gtfs_service_change_history.py  gtfs_service_change_tracker.py  gtfs_trip_counts_reporter.py  route_direction_calculator.py
service_population_tools/: gtfs_demog_calculator.py
static_checks/: custom_script_structure_checker.py  file_tree_printer.py  formatter_black_isort.py  function_consistency_checker.py  import_and_style_formatter.py  mypy_checker.py  print_imports_by_type.py  print_repo_file_tree.py  (+9 more)
(+246 files in other folders)
