# pyproject.toml
#
# This project is a collection of standalone scripts, not an installable
# package — there is intentionally no [project] table. Runtime dependencies
# live in requirements.txt and requirements-arcpro.txt; this file owns tool
# configuration and dev/test tooling only.

# ================================================================
# PYTEST
# ================================================================
[tool.pytest.ini_options]
minversion   = "8.0"
testpaths    = ["tests"]
python_files = ["test_*.py"]
addopts      = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

# ================================================================
# COVERAGE
# ================================================================
[tool.coverage.run]
branch = true
source = ["scripts", "utils"]
omit   = ["**/*arcpy*"]

[tool.coverage.report]
show_missing  = true
skip_covered  = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# ================================================================
# DEPENDENCY GROUPS  (PEP 735)
# ================================================================
# Install with pip 25.1+ or uv:
#   pip install --group dev --group typing
#   uv sync --group dev --group typing
[dependency-groups]
dev = [
    "pytest==8.3.5",
    "pytest-cov>=5,<7",
    "ruff>=0.4.0",
    "ty",
    "faker==25.8.0",
]

typing = [
    "pandas-stubs==2.2.*",
    "types-openpyxl>=3.1,<5",
    "types-networkx>=3.4,<4",
]

# ================================================================
# RUFF
# ================================================================
[tool.ruff]
target-version = "py312"
line-length    = 100

[tool.ruff.lint]
# I  → isort-compatible import ordering
# F  → Pyflakes-equivalent static analysis
# D  → pydocstyle (Google-style enforced below)
# ANN = flake8-annotations
# TC = flake8-type-checking
select   = ["I", "F", "D", "ANN", "TCH", "B", "E", "W", "PD", "T20"]
fixable  = ["F401", "D", "I"]
ignore   = ["ANN401", "TC002", "TC003"]

[tool.ruff.lint.per-file-ignores]
# Keep tests lean: skip module docstrings and param annotations for fixtures.
"tests/**/*" = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "ANN001"]
# dev_tools are CLI scripts where print() is the intended output mechanism.
"dev_tools/**/*" = ["T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ================================================================
# TY
# ================================================================
[tool.ty]

[tool.ty.src]
exclude = ["**/*arcpy*"]

[tool.ty.environment]
python-version = "3.12"
extra-paths = ["scripts/ridership_tools", "scripts/operations_tools"]

[tool.ty.rules]
unsupported-operator = "warn"
invalid-return-type = "warn"
unresolved-import = "error"
invalid-assignment = "warn"
invalid-argument-type = "warn"
not-subscriptable = "warn"
not-iterable = "warn"
no-matching-overload = "warn"
invalid-parameter-default = "warn"
possibly-missing-attribute = "warn"
redundant-cast = "error"
unresolved-reference = "error"
unresolved-attribute = "warn"
unresolved-global = "warn"

# ================================================================
# COMMIT MESSAGE LINTING
# ================================================================
